# maybe_static

./: Cargo.toml  README.md
src/: lib.rs
